# proyectoDiseno

Powerpoint/: CMakeLists.txt
Powerpoint/cmake/: FindVERILATOR.cmake
Powerpoint/cpp/: Makefile  VGADefines.h  VGADisplay.cpp  VGADisplay.h  VGATest  VGATestMain.cpp
Powerpoint/verilog/: ImageRom.v  ImagenVGA_Proyecto.mif  VGA800x600.ucf  VGA800x600.v  VGADefines.vh  final.mif
